# aoc

./: .gitignore  Gemfile  LICENSE  README.md  pyproject.toml
2019/: day01.py  day02.py
2020/: 2020 December.ipynb  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day2.py  day5.py  day6.py  day7.py  day8.py  day9.py
2021/: 2021 Attempts.ipynb  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day13.py  day14.py  day15.py  day17.py
2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22-tset.py  day22.py
2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py
2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py
aoc/: __init__.py  cli.py  core.py  helpers.py  utils.py
aoc/data/: session_token.txt
aoc/templates/: python_day_template.txt
docs/: index.md
tests/: test_generate_template.py
